Bug 1204410 - Buttons besides 'User Story' overflow if the user story is a one-liner

--- a/extensions/BugModal/web/bug_modal.css
+++ b/extensions/BugModal/web/bug_modal.css
@@ -285,6 +285,7 @@ input[type="number"] {
 #user-story {
     margin: 0;
     white-space: pre-wrap;
+    min-height: 2em;
 }
 
 #user-story-actions {
